plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.iucyh'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

def jnanoidVersion = '2.0.0'
def jsoupVersion = '1.21.2'
def querydslVersion = '7.1'
def querydslSrcDir = layout.buildDirectory.dir("generated/querydsl")

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// database
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// querydsl
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${querydslVersion}:jpa"
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	// nanoid
	implementation "com.aventrix.jnanoid:jnanoid:${jnanoidVersion}"

	// jsoup
	implementation "org.jsoup:jsoup:${jsoupVersion}"
}

sourceSets {
	main {
		java {
			srcDirs += querydslSrcDir
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory.set(querydslSrcDir)
}
